--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -634,6 +634,10 @@
 
 @media only screen and (max-width: 500px) {
     
+    body {
+    	min-height: 100%;
+    }
+    
     .bannertxt {
     	top: 20%;
     }
