--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,7 @@
         background-attachment: fixed;
         background-size: cover;
 		text-align: center;
+		min-height: 100vh;
 	}
 
 	body, input, select, textarea {
