--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,7 @@
         background-attachment: fixed;
         background-size: cover;
 		text-align: center;
-		min-height: 100vh;
+		min-height: 100%;
 	}
 
 	body, input, select, textarea {
