--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -635,7 +635,7 @@
 @media only screen and (max-width: 500px) {
     
     body {
-    	background-size: auto 100%;
+    	background-size: 100% auto;
     }
     
     .bannertxt {
